--- a/miniprogram/pages/search/search.wxml
+++ b/miniprogram/pages/search/search.wxml
@@ -16,7 +16,7 @@
 </block>
 <block wx:if="{{searched}}">
   <view class="no_result_button">
-    没有找到想吃的美食？不妨去看看其他美食?
+    没有找到搜索的攻略内容？不妨去看看其他好玩的?
     <navigator url="../list/list" open-type="redirect" class="button view_all">查看全部</navigator>
   </view>
 </block>
