--- a/miniprogram/pages/list/list.wxss
+++ b/miniprogram/pages/list/list.wxss
@@ -1,5 +1,5 @@
 .card{
-  border-bottom: 1rpx solid #cecece;
+  border-bottom: 1rpx solid #ccc7c7;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
