--- a/miniprogram/pages/map/map.wxml
+++ b/miniprogram/pages/map/map.wxml
@@ -8,6 +8,7 @@
   subkey="{{mapSubKey}}" 
   show-compass="{{true}}"
    bindmarkertap="onMarkerTap">
+   <!-- 定义在对应的同名js文件中 -->
    <!-- 上方的添加提醒 -->
     <block wx:if="{{!hideMe}}">
       <cover-view class="add_me" bindtap="hideMe">添加到【我的小程序】更快找到我</cover-view>
@@ -19,14 +20,14 @@
         class='button' 
         open-type='getUserInfo' 
         bindgetuserinfo='getUserInfo' 
-        bindlongpress='getOpenID' lang='zh_CN'>管理入口</button>
+        bindlongpress='getOpenID' lang='zh_CN'>管理入口
+      </button>
     </cover-view>
     <!-- 搜索按钮 -->
     <cover-view wx:else class="cover">
       <button class='button' bindtap='search'>搜索</button>
     </cover-view>
     <!-- 查看全部 -->
-    <cover-view class="button show_all" bindtap="viewAll" bindlongpress='showAdmin'>查看全部</cover-view>
-    
- 
+
+    <cover-view class="button show_all" bindtap="viewAll" bindlongpress='showAdmin'>查看全部      </cover-view>
 </map>
