--- a/miniprogram/pages/map/map.wxml
+++ b/miniprogram/pages/map/map.wxml
@@ -10,17 +10,17 @@
    bindmarkertap="onMarkerTap">
    <!-- 定义在对应的同名js文件中 -->
    <!-- 上方的添加提醒 -->
-    <block wx:if="{{!hideMe}}">
+    <!-- <block wx:if="{{!hideMe}}">
       <cover-view class="add_me" bindtap="hideMe">添加到【我的小程序】更快找到我</cover-view>
       <cover-view class="up" bindtap="hideMe"></cover-view>
-    </block>
+    </block> -->
     <!-- 管理入口 -->
     <cover-view class="cover" wx:if="{{showAdmin}}">
       <button 
         class='button' 
         open-type='getUserInfo' 
         bindgetuserinfo='getUserInfo' 
-        bindlongpress='getOpenID' lang='zh_CN'>管理入口
+        bindlongpress='getOpenID' lang='zh_CN'>增加攻略
       </button>
     </cover-view>
     <!-- 搜索按钮 -->
@@ -29,5 +29,5 @@
     </cover-view>
     <!-- 查看全部 -->
 
-    <cover-view class="button show_all" bindtap="viewAll" bindlongpress='showAdmin'>查看全部      </cover-view>
+    <cover-view class="button show_all" bindtap="viewAll" bindlongpress='showAdmin'>查看全部</cover-view>
 </map>
