--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,7 +1,9 @@
 <!--pages/index/index.wxml-->
 <!--pages/activity/index.wxml-->
 <view class="index">
-  <view class="index-hd" style="background-image:url(resources/map.png)">
+  <view class="index-hd" style="background-image:url({{picture.map}})">
+    <!-- <image class="index-hd" src="{{picture.map}}" /> -->
+     <!-- <image src="{{picture.map}}"  mode="aspectFit"  /> -->
     <button class="index-search" bindtap="search">
       <!-- <image class='search-icon' src='resources/search-icon.png'></image> -->
       <!-- <image class='search-icon' src='resources/search-icon.png'></image> -->
@@ -10,24 +12,24 @@
   </view>
   <view class="index-md">当下热门目的地</view>
   <view class="index-buttonrow">
-    <button class="index-button" plain='true' style="background-image:url(resources/travel.jpg)" bindtap="GoTOTravel">
+    <button class="index-button" plain='true' style="background-image:url({{picture.travel}})" bindtap="GoTOTravel">
       <view class="button-text"> 旅游 </view>
     </button>
-    <button class="index-button" plain='true' style="background-image:url(resources/food.jpg)" bindtap="GoTOFood">
+    <button class="index-button" plain='true' style="background-image:url({{picture.food}})" bindtap="GoTOFood">
       <view class="button-text"> 美食 </view>
     </button>
-    <button class="index-button" plain='true' style="background-image:url(resources/sport.jpg)" bindtap="GoTOSport">
+    <button class="index-button" plain='true' style="background-image:url({{picture.sport}})" bindtap="GoTOSport">
       <view class="button-text"> 运动 </view>
     </button>
   </view>
   <view class="index-buttonrow">
-    <button class="index-button" plain='true' style="background-image:url(resources/office.jpg)" bindtap="GoTOOffice">
+    <button class="index-button" plain='false' style="background-image:url({{picture.office}})" bindtap="GoTOOffice">
       <view class="button-text"> 办公 </view>
     </button>
-    <button class="index-button" plain='true' style="background-image:url(resources/study.jpg)" bindtap="GoTOStudy">
+    <button class="index-button" plain='true' style="background-image:url({{picture.study}})" bindtap="GoTOStudy">
       <view class="button-text"> 学习 </view>
     </button>
-    <button class="index-button" plain='true' style="background-image:url(resources/other.jpg)" bindtap="GotoMap">
+    <button class="index-button" plain='true' style="background-image:url({{picture.other}})" bindtap="GotoMap">
       <view class="button-text"> 地图 </view>
     </button>
   </view>
