--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -52,6 +52,7 @@
   padding-left: 8rpx;
   margin-top: 30rpx;
   position: relative;
+  /* position: absolute; */
   display: flex;
   flex-direction: row;
 }
