make_some_changes
move picture files to cloud database

--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,4 +1,6 @@
 @import "vendor/fontawesome.wxss";
+@import "vendor/fontawesome.wxss";
+@import "style/weui.wxss";
 .button {
   color: #fff;
   height: 100rpx;
