--- a/miniprogram/pages/food/food.wxml
+++ b/miniprogram/pages/food/food.wxml
@@ -1,2 +1,69 @@
-<!--pages/food/food.wxml-->
-<text>pages/food/food.wxml</text>
+<view class="top" style="background-image:url(../../images/food1.jpg)">
+  <view class="top-text"> 美 食 </view>
+  <view class="top-travel"> FOOD </view>
+</view>
+<input class="search_input" placeholder='点我开始搜索' bindinput="navigateToSearch" bindfocus="navigateToSearch"></input>
+<view class="page">
+  <view class="page__bd">
+    <view class="weui-panel weui-panel_access">
+      <view class="weui-panel__ft">
+        <picker bindchange="bindPickerChange" value="{{type}}" range="{{array}}">
+          <view class="weui-cell weui-cell_access weui-cell_link">
+            <view class="weui-cell__bd">分类查看</view>
+            <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+          </view>
+        </picker>
+      </view>
+    </view>
+    <view class="weui-panel weui-panel_access">
+      <view class="weui-panel__ft">
+        <view class="weui-cell weui-cell_access weui-cell_link">
+          <view class="weui-cell__bd">餐厅简介</view>
+          <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+        </view>
+      </view>
+    </view>
+    <view class="weui-panel weui-panel_access">
+      <view class="weui-panel__hd">美食推荐</view>
+      <view class="weui-panel__bd">
+        <block wx:for="{{stores}}" wx:key="_id">
+          <navigator wx:if="{{index<2}}" url="../info/info?id={{item._id}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+            <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+              <image class="weui-media-box__thumb" src="{{item.images}}" />
+            </view>
+            <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+              <view class="weui-media-box__title">{{item.contact}}</view>
+              <view class="weui-media-box__desc">{{item.notes}}</view>
+            </view>
+          </navigator>
+        </block>
+      </view>
+      <view class="weui-panel__ft">
+        <navigator url="../list/list?type=5">
+          <view class="weui-cell weui-cell_access weui-cell_link">
+            <view class="weui-cell__bd">查看更多</view>
+            <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+          </view>
+        </navigator>
+      </view>
+    </view>
+    <view class="weui-panel weui-panel_access">
+      <view class="weui-panel__ft">
+        <view class="weui-cell weui-cell_access weui-cell_link">
+          <button class='choose' open-type='getUserInfo' bindgetuserinfo='getUserInfo' bindlongpress='getOpenID' lang='zh_CN'>添加评价</button>
+        </view>
+      </view>
+    </view>
+  </view>
+</view>
+<!--block wx:for="{{stores}}" wx:key="_id">
+  <navigator url="../info/info?id={{item._id}}">
+    <view wx:if="{{item.star==5}}" class="card">
+      <view  class="card_contact">{{item.contact}}</view>
+      <view class="card_infobar">
+        <view class="card_title">{{item.title}}</view>
+        <view class="card_thumbsup">{{item.thumbs_up}}</view>
+      </view>
+    </view>
+  </navigator>
+</block-->
