--- a/miniprogram/pages/study/study.wxss
+++ b/miniprogram/pages/study/study.wxss
@@ -1,63 +1,107 @@
-/* pages/study/study.wxss */
-.post-container{
+.card {
+  border-bottom: 1rpx solid #cecece;
+  display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  padding: 10rpx;
+}
+
+.card_contact {
+  font-size: 50rpx;
+  font-weight: 700;
+}
+
+.card_infobar {
   display: flex;
-  margin: 20rpx 0 40rpx;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.card_title {
+  font-size: 30rpx;
+  font-weight: 300;
+  width: 600rpx;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.card_thumbsup {
+  font-size: 30rpx;
+  font-weight: 700;
+}
+
+.search_input {
+  background-color: #eee;
+  margin: 5px;
+  width: 730rpx;
+  height: 80rpx;
+}
+
+.input-placeholder {
+  text-align: center;
+}
+
+.choose {
+  text-align: center;
+  font-size: 95%;
   background-color: #fff;
-  border-bottom: 1px solid #ededed;
-  border-top: 1px solid#ededed;
-  padding-bottom: 5px;
+  color: #0407228c;
+  /* right: 275rpx; */
 }
 
-.post-author-date{
-  margin: 10rpx 0 20rpx 10rpx;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+.choose::after {
+  border: none;
 }
 
-.post-author-date image{
-  width: 60rpx;
-  height: 60rpx;
+.top {
+  background-size: 100%;
+  width: 750rpx;
+  height: 400rpx;
 }
 
-.post-author-date text{
-  margin-left: 20rpx;
+.top-text {
+  position: absolute;
+  color: #fff;
+  font-size: 50rpx;
+  font-weight: bolder;
+  text-align: center;
+  left: 0;
+  top: 140rpx;
+  right: 0;
+  bottom: 0;
 }
-.post-image{
-  width:100%;
-  height: 340rpx;
-  margin-bottom: 15px;
+
+.top-travel {
+  position: absolute;
+  color: #fff;
+  font-size: 40rpx;
+  font-weight: bolder;
+  text-align: center;
+  left: 0;
+  top: 200rpx;
+  right: 0;
+  bottom: 0;
 }
-.post-title{
-  font-size:16px;
-  font-weight: 600;
-  color:#333;
-  margin-bottom: 10px;
-  margin-left: 10px;
+
+.top-temp {
+  position: absolute;
+  color: #fff;
+  font-size: 30rpx;
+  text-align: left;
+  left: 580rpx;
+  top: 300rpx;
+  right: 0;
+  bottom: 0;
 }
-.post-content{
-  color: #666;
-  font-size: 26rpx;
-  margin-bottom: 20rpx;
-  margin-left: 20rpx;
-  letter-spacing: 2rpx;
-  line-height: 40rpx;
-}
-.post-like{
-  display: flex;
-  flex-direction: row;
-  font-size: 13px;
-  line-height: 16px;
-  margin-left: 10px;
-  align-items: center;
-  
-}
-.post-like image{
-  height: 16px;
-  width:16px;
-  margin-right: 8px;
-}
-.post-like text{
-  margin-right: 20px;
+
+.top-temp-img {
+  background-size: 100%;
+  width: 45rpx;
+  height: 45rpx;
+  position: absolute;
+  text-align: left;
+  left: 525rpx;
+  top: 300rpx;
+  right: 0;
+  bottom: 0;
 }
