--- a/miniprogram/pages/work/work.wxss
+++ b/miniprogram/pages/work/work.wxss
@@ -1,24 +1,107 @@
-/* pages/work/work.wxss */
-/* @import "../../components/trip/trip.wxss"; */
-@import "../../componets/trip/trip.wxss";
-page{
-  background-color: #f6f6f6;
+.card {
+  border-bottom: 1rpx solid #cecece;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 10rpx;
 }
-.list{
+
+.card_contact {
+  font-size: 50rpx;
+  font-weight: 700;
 }
-.m-trip{
-  margin: 20rpx;
+
+.card_infobar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.trip-title{
-  margin-bottom: 10rpx;
+
+.card_title {
+  font-size: 30rpx;
+  font-weight: 300;
+  width: 600rpx;
+  overflow: hidden;
+  white-space: nowrap;
 }
-.loading{
-  color: #b0b0b0;
+
+.card_thumbsup {
+  font-size: 30rpx;
+  font-weight: 700;
+}
+
+.search_input {
+  background-color: #eee;
+  margin: 5px;
+  width: 730rpx;
+  height: 80rpx;
+}
+
+.input-placeholder {
   text-align: center;
-  margin: 20rpx 0;
 }
-.loading-gif{
-  width: 220rpx;
-  height: 42rpx;
-  vertical-align: bottom;
+
+.choose {
+  text-align: center;
+  font-size: 95%;
+  background-color: #fff;
+  color: #0407228c;
+  /* right: 275rpx; */
+}
+
+.choose::after {
+  border: none;
+}
+
+.top {
+  background-size: 100%;
+  width: 750rpx;
+  height: 400rpx;
+}
+
+.top-text {
+  position: absolute;
+  color: #fff;
+  font-size: 50rpx;
+  font-weight: bolder;
+  text-align: center;
+  left: 0;
+  top: 140rpx;
+  right: 0;
+  bottom: 0;
+}
+
+.top-travel {
+  position: absolute;
+  color: #fff;
+  font-size: 40rpx;
+  font-weight: bolder;
+  text-align: center;
+  left: 0;
+  top: 200rpx;
+  right: 0;
+  bottom: 0;
+}
+
+.top-temp {
+  position: absolute;
+  color: #fff;
+  font-size: 30rpx;
+  text-align: left;
+  left: 580rpx;
+  top: 300rpx;
+  right: 0;
+  bottom: 0;
+}
+
+.top-temp-img {
+  background-size: 100%;
+  width: 45rpx;
+  height: 45rpx;
+  position: absolute;
+  text-align: left;
+  left: 525rpx;
+  top: 300rpx;
+  right: 0;
+  bottom: 0;
 }
