--- a/miniprogram/pages/add/add.wxml
+++ b/miniprogram/pages/add/add.wxml
@@ -1,9 +1,14 @@
+<!-- <block wx:if="{{mark==学习}}"> -->
 <form report-submit='true' onsubmit="createItem">
   <view class='desc'>位置设定</view>
   <view class="loactionGroup">
     <button bindtap='chooseLocation' type='primary'>地图选址</button>
   </view>
-   <view class='desc'>店铺名称</view>
+  <!-- <block wx: if="{{mark==屠夫}}"> -->
+    <view class='desc'>店铺名称</view>
+    <!-- <text>{{mark}}</text> -->
+  <!-- </block> -->
+  <!-- wx:if="{{mark=学习}}"  -->
   <input placeholder='请输入或选择店铺的名称' name="title" value='{{name}}'></input>
   <!--checkbox-group bindchange="checkboxChange">
   <label class="desc" wx:for="{{items}}">
@@ -16,9 +21,9 @@
   <view class='desc'>菜名设定</view>
   <input placeholder='要点评的菜是？' name="contact" value='{{phone}}'></input>
   <view class='desc'>种类</view>
-    <picker bindchange="bindPickerChange" value="{{type}}" range="{{array}}">                
-          <view class='choose' >{{type}}</view>
-    </picker>
+  <picker bindchange="bindPickerChange" value="{{type}}" range="{{array}}">
+    <view class='choose'>{{type}}</view>
+  </picker>
   <view class='desc'>价格</view>
   <input placeholder='单位是元～' name="price_per" type="number" value='{{price_per}}'></input>
   <view class='desc'>关键词</view>
@@ -31,3 +36,4 @@
   <button bindtap='uploadImage'>点我选择照片</button>
   <button class='submit' type="primary" form-type='submit'>创建</button>
 </form>
+<!-- </block> -->
