--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -2,6 +2,7 @@
   <button class="index-search" bindtap="search">
     <view class="search-text"> 请输入您想去的目的地</view>
   </button>
+  <!-- <image class="index-hd" src="{{picture.map}}"> -->
   <image class="index-hd" src="{{picture.map}}">
   </image>
   <view class="index-md">当下热门目的地</view>
