--- a/miniprogram/pages/map/map.wxml
+++ b/miniprogram/pages/map/map.wxml
@@ -16,12 +16,12 @@
     </block> -->
     <!-- 管理入口 -->
     <cover-view class="cover" wx:if="{{showAdmin}}">
-      <button 
+      <!-- <button 
         class='button' 
         open-type='getUserInfo' 
         bindgetuserinfo='getUserInfo' 
         bindlongpress='getOpenID' lang='zh_CN'>增加攻略
-      </button>
+      </button> -->
     </cover-view>
     <!-- 搜索按钮 -->
     <cover-view wx:else class="cover">
