--- a/miniprogram/pages/study/study.wxml
+++ b/miniprogram/pages/study/study.wxml
@@ -1,7 +1,11 @@
-<view class="top" style="background-image:url(../../images/study.jpg)">
+<!-- <view class="top" style="background-image:url(../../images/study.jpg)">
   <view class="top-text"> 学习 </view>
   <view class="top-travel"> study </view>
-</view>
+</view> -->
+<image class="top" src='{{picture.studypage}}' mode='aspectFill'></image>
+<!-- <image class="top" src='https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1559404045622&di=274012da260d333aa84569bbbdab63ae&imgtype=0&src=http%3A%2F%2Fimages.gofreedownload.net%2Fblue-background-picture-150787.jpg' mode='aspectFill'></image> -->
+ <view class="top-text"> 学习 </view>
+  <view class="top-travel"> study </view>
 <input class="search_input" placeholder='点我开始搜索' bindinput="navigateToSearch" bindfocus="navigateToSearch"></input>
 <view class="page">
   <view class="page__bd">
@@ -26,9 +30,11 @@
     <view class="weui-panel weui-panel_access">
       <view class="weui-panel__hd">学习地点推荐</view>
       <view class="weui-panel__bd">
-        <block wx:for="{{stores}}" wx:key="_id">
-        <!-- 推荐三个场景 -->
-          <navigator wx:if="{{index<3}}" url="../info/info?id={{item._id}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+        <block wx:for="{{stores}}"  wx:key="_id">
+        <!-- 推荐三个场景 推荐标准评分 -->
+        <!-- 用_id 做索引 跳转到info页 -->
+          <navigator wx:if="{{item.section==section&&item.star>8&&index<3}}"  url="../info/info?id={{item._id}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+          <!-- <text>{{index}}</text> -->
             <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
               <image class="weui-media-box__thumb" src="{{item.images[0]}}" />
             </view>
@@ -40,7 +46,8 @@
         </block>
       </view>
       <view class="weui-panel__ft">
-        <navigator url="../list/list">
+      <!-- 传值section(所属区域）到list页 -->
+        <navigator url="../list/list?section={{section}}">
           <view class="weui-cell weui-cell_access weui-cell_link">
             <view class="weui-cell__bd">查看更多</view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
