--- a/miniprogram/pages/map/map.wxml
+++ b/miniprogram/pages/map/map.wxml
@@ -10,10 +10,10 @@
    bindmarkertap="onMarkerTap">
    <!-- 定义在对应的同名js文件中 -->
    <!-- 上方的添加提醒 -->
-    <!-- <block wx:if="{{!hideMe}}">
+    <block wx:if="{{!hideMe}}">
       <cover-view class="add_me" bindtap="hideMe">添加到【我的小程序】更快找到我</cover-view>
       <cover-view class="up" bindtap="hideMe"></cover-view>
-    </block> -->
+    </block>
     <!-- 管理入口 -->
     <cover-view class="cover" wx:if="{{showAdmin}}">
       <!-- <button 
@@ -29,5 +29,5 @@
     </cover-view>
     <!-- 查看全部 -->
 
-    <cover-view class="button show_all" bindtap="viewAll" bindlongpress='showAdmin'>查看全部</cover-view>
+    <cover-view class="button show_all" bindtap="viewAll" bindlongpress='getOpenID'>查看全部</cover-view>
 </map>
